tests/checker/fail/literal_dispatch_duplicate.can
Routed = (String) => String {
    String -> (
        * "/a" => String { "a" }
        * "/a" => String { "again" }
        * String => String { "other" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
